--- a/GraphVisualizer/index.html
+++ b/GraphVisualizer/index.html
@@ -15,10 +15,10 @@
 		<div id="inner-container">
 			<div id="title"><h1>Graph Visualizer</h1></div>
 			<div id="box">
-				<a href="./aStar.html"><span>Maze Generator</span></a>
-				<a href=""><span>Convex Hull</span></a>
+				<a href=""><span>Maze Generator</span></a>
+				<a href="/convexhull.html"><span>Convex Hull</span></a>
 				<a href=""><span>MST</span> </a>
-				<a href=""><span>A*</span></a>
+				<a href="./aStar.html"><span>A*</span></a>
 			</div>
 
 	</div>
