--- a/ConvexHull/index.html
+++ b/ConvexHull/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="a-star" class="container">
 			<div id="title">
-				<h1>A* Algorithm</h1>
+				<h1>Convex Hull - Wrapping Gift</h1>
 			</div>
 			
 			<div id="canvas-container">
@@ -22,8 +22,7 @@
 			</div>
 			
 		</div>
-		<script type="text/javascript" src="script/components/mazecell.js"></script>
-		<script type="module" src="./script/a-star.js"></script>
+		<script type="module" src="./script/convex-hull2.js"></script>
 	</body>
 
 </html>
